--- a/styles/admin.css
+++ b/styles/admin.css
@@ -8,19 +8,29 @@ body {
   background-color: wheat;
 }
 
-/* nav-bar */
-.lg img {
-  width: 6rem;
-  transform: translateX(500%);
-}
-
-.nav-link:hover {
-  background-color: #c77948;
-}
-
-.dropdown-menu a:hover {
-  background-color: #c77948;
-}
+    /* nav-bar */
+    .lg img{
+      width: 9rem;
+      margin-right: 2rem;
+  }
+  
+  .navbar{
+      padding: 1.5rem 3rem ;
+      font-size: 1.3rem;
+  }
+  
+  .nav-link, .active{
+      color: #c77948;
+  
+  }
+  
+  .nav-link:hover{
+      background-color: #c77948;
+  }
+  
+  .dropdown-menu a:hover {
+      background-color: #c77948;
+  }
 
 .min {
   display: grid;
@@ -40,7 +50,9 @@ span {
 }
 
 .title {
-  transform: translateX(15%);
+  padding: 0rem 3REM;
+  width: 100%;
+  /* transform: translateX(15%); */
 }
 
 .add {
@@ -65,10 +77,10 @@ span {
 
 /* table */
 table {
-  width: 58rem !important;
+  width: 100% ;
   font-size: 2px;
-  margin: 0rem;
-  transform: translateX(1%);
+  /* padding: 0rem 2rem; */
+  /* transform: translateX(1%); */
 }
 
 th {
