--- a/styles/landing.css
+++ b/styles/landing.css
@@ -5,7 +5,10 @@
 
     /* body */
 body{
-    background-color: white;
+    background-image: url("../images/Wholesale-Bags-China-e1632341835111.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 
@@ -36,30 +39,69 @@ body{
 }
 
     /* logo */
-/* .logo{
-    text-align: center;
-}
+.logo{
+margin-left: 23rem;}
 
 .logo img{
-    transform: translateY(5%);
+    transform: translateY(75%);
     width: 8rem;
-} */
+}
 
 
         /* landing */
 .welcome{
+    display: flex;
+    flex-direction: column;
     text-align: center;
-    position: absolute;
-    top: 30%;
-    left: 33%;
+    margin-top: 5rem;
     justify-content: center;
     align-items: center;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
-    width: 30rem;
 }
 
 h2{
     font-size: 5rem;
+    font-weight: 600;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.line{
+    width: 5rem;
+    height: 3px;
+    background-color: #3742FA;
+}
+
+.shop{
+    background-color: #3742FA;
+    color: white;
+    font-size: 1.7rem;
+    border: none;
+    padding: .5rem 1rem;
+    margin-top: 6rem;
+}
+
+.admin{
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 5rem;
+    margin-top: 5rem;
+}
+
+a{
+    text-decoration: none;
+    color: #ffffff;
+}
+
+a:hover{
+    color: #ffffff;
+}
+
+.ad{
+    background-color: #3742FA;
+    color: white;
+    font-size: 1.2rem;
+    border: none;
+    padding: .5rem 1rem;
+    margin-top: 6rem;
 }
 
 /* .dis img{
